# designMode

./: .gitignore  CMakeLists.txt  README  README.MD  main.cpp
mode/BuilderPattern/: builder.cpp  builder.hpp  main.cpp
mode/bridge/: bridge.hpp  main.cpp
mode/factory/: factory.cpp  factory.hpp  main.cpp
mode/filter/: filter.hpp  main.cpp
mode/prototype/: main.cpp  prototype.cpp  prototype.hpp
